Wrap link in paragraph tag in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Hola desde GitHub Pages</h1>
   <p>Este es mi sitio web personalizado.</p>
-  <a href="https://lenin-beep.github.io/Lenin_Trinidad/">Click acá para volver a la misma página</a>
+   <p><a href="https://lenin-beep.github.io/Lenin_Trinidad/">Click acá para volver a la misma página</a></p> 
 </body>
 </html>
