Add navigation menu and update heading in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hola desde GitHub Pages</h1>
+  <nav>
+        <a href="#inicio">Inicio</a>
+        <a href="#sobre">Sobre Mí</a>
+        <a href="#contacto">Proyectos</a>
+        <a href="#contacto">Blog</a>
+        <a href="#contacto">Apuntes</a>
+  </nav>
+  <h1>Lenin Trinidad</h1>
   <p>Este es mi sitio web personalizado.</p>
    <p><a href="https://lenin-beep.github.io/Lenin_Trinidad/">Click acá para volver a la misma página</a></p> 
 </body>
