Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <nav>
         <a href="#inicio">Inicio</a>
         <a href="#sobre">Sobre Mí</a>
-        <a href="#contacto">Proyectos</a>
-        <a href="#contacto">Blog</a>
-        <a href="#contacto">Apuntes</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#blog">Blog</a>
+        <a href="#apuntes">Apuntes</a>
   </nav>
   <p>Este es mi sitio web personalizado.</p>
    <p><a href="https://lenin-beep.github.io/Lenin_Trinidad/">Click acá para volver a la misma página</a></p> 
