Update navigation links to use HTML files

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <h1>Lenin Trinidad</h1>
   <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#sobre">Sobre Mí</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#blog">Blog</a>
-        <a href="#apuntes">Apuntes</a>
+    <a href="index.html">Inicio</a>
+    <a href="sobre.html">Sobre Mí</a>
+    <a href="proyectos.html">Proyectos</a>
+    <a href="blog.html">Blog</a>
+    <a href="apuntes.html">Apuntes</a>
   </nav>
   <p>Este es mi sitio web personalizado.</p>
    <p><a href="https://lenin-beep.github.io/Lenin_Trinidad/">Click acá para volver a la misma página</a></p> 
