--- a/apuntes.html
+++ b/apuntes.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Lenin Trinidad</h1>
+<div id="tabla-container">
   <table id="tabla">
   <thead>
     <tr>
@@ -17,6 +18,7 @@
   </thead>
   <tbody></tbody>
 </table>
+</div>
 
 <script>
   fetch("apuntes.json")
