--- a/apuntes.html
+++ b/apuntes.html
@@ -7,6 +7,15 @@
 </head>
 <body>
   <h1>Lenin Trinidad</h1>
+
+<nav>
+    <a href="index.html">Inicio</a>
+    <a href="sobre.html">Sobre Mí</a>
+    <a href="proyectos.html">Proyectos</a>
+    <a href="blog.html">Blog</a>
+    <a href="apuntes.html">Apuntes</a>
+  </nav>
+  
 <div id="tabla-container">
   <table id="tabla">
   <thead>
