--- a/sobre.html
+++ b/sobre.html
@@ -21,22 +21,35 @@
   <main class="container">
     <section>
       <h2>Sobre mí</h2>
-      <p>Soy estudiante de Matemáticas en la Universidad, interesado en análisis, álgebra y teoría de bifurcaciones. Me apasiona explicar temas complejos con rigor y claridad; por eso escribo apuntes para estudiantes y doy pequeñas charlas y guías didácticas.</p>
+      <p>Soy estudiante del pregrado de Matemática en la Universidad Nacional Mayor de San Marcos, 
+        interesado en análisis, álgebra y sistemas dinámicos. 
+        Me apasiona explorar temas complejos con rigor y claridad; por eso escribo apuntes para estudiantes y doy pequeñas charlas y guías didácticas.
+      </p>
 
       <h3>Experiencia</h3>
       <ul>
         <li>Asistente de docencia — sesiones de tutoría en álgebra y análisis.</li>
-        <li>Autor de apuntes y material didáctico.</li>
+        <li>Profesor de la academia Trinotrix.</li>
       </ul>
 
-      <h3>Contacto</h3>
-      <p>Puedes dejarme un issue en el repositorio de GitHub o enlazar al correo que pongas en tu footer.</p>
+      <div class="contacto">
+        <h3>Contacto</h3>
+        <p><strong>Teléfono:</strong> +51 951453715</p>
+      
+        <p><strong>Correo:</strong><br>
+          <a href="mailto:lenin.yasel@gmail.com">lenin.yasel@gmail.com</a><br>
+          <a href="mailto:lenin.trinidad@unmsm.edu.pe">lenin.trinidad@unmsm.edu.pe</a><br>
+          <a href="mailto:lenin.trinidad.f@uni.pe">lenin.trinidad.f@uni.pe</a>
+        </p>
+      
+        <p><strong>Página personal:</strong><br>
+          <a href="https://leninyasseltrinidadf.github.io/Lenin_Trinidad" target="_blank">
+            https://leninyasseltrinidadf.github.io/Lenin_Trinidad
+          </a>
+        </p>
+      </div>
     </section>
   </main>
-
-  <footer style="text-align:center; padding:20px 0;">
-    <small>© Lenin Trinidad</small>
-  </footer>
 
   <script defer src="script.js"></script>
 </body>
