--- a/blogs/entrada1.html
+++ b/blogs/entrada1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insomnio</title>
+    <title>Lenin Trinidad</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
