--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
       <h3>Sobre la Organización de la Matemática</h3>
       <small>19-11-2025</small>
       <p>Entrada sobre algunas experiencias de la carrera y por qué organizar los apuntes personales</p>
-      <p><a href="/blogs/entrada1.html" class="btn">Leer más</a></p>
+      <p><a href="blogs/entrada1.html" class="btn">Leer más</a></p>
     </article>
   </main>
 
