--- a/blogs/entrada1.html
+++ b/blogs/entrada1.html
@@ -13,11 +13,11 @@
     <header>
       <h1>Lenin Trinidad</h1>
       <nav>
-        <a href="index.html">Inicio</a>
-        <a href="sobre.html">Sobre Mí</a>
-        <a href="proyectos.html">Proyectos</a>
-        <a href="blog.html">Blog</a>
-        <a href="apuntes.html">Apuntes</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../sobre.html">Sobre Mí</a>
+        <a href="../proyectos.html">Proyectos</a>
+        <a href="../blog.html">Blog</a>
+        <a href="../apuntes.html">Apuntes</a>
       </nav>
     </header>
     <main>
