--- a/sobre.html
+++ b/sobre.html
@@ -20,19 +20,20 @@
   </header>
 
   <main class="container">
-    <section>
-      <h2>Sobre mí</h2>
-      <p>Soy estudiante del pregrado de Matemática en la Universidad Nacional Mayor de San Marcos, 
-        interesado en análisis, álgebra y sistemas dinámicos. 
-        Me apasiona explorar temas complejos con rigor y claridad; por eso escribo apuntes para estudiantes y doy pequeñas charlas y guías didácticas.
-      </p>
-
-      <h3>Experiencia</h3>
-      <ul>
-        <li>Asistente de docencia — sesiones de tutoría en álgebra y análisis.</li>
-        <li>Profesor de la academia Trinotrix.</li>
-      </ul>
-
+    <section class="sobre-mi">
+      <div class="texto">
+        <h2>Sobre mí</h2>
+          <p>Soy estudiante del pregrado de Matemática en la Universidad Nacional Mayor de San Marcos, 
+            interesado en análisis, álgebra y sistemas dinámicos. 
+            Me apasiona explorar temas complejos con rigor y claridad; por eso escribo apuntes para estudiantes y doy pequeñas charlas y guías didácticas.
+          </p>
+    
+          <h3>Experiencia</h3>
+          <ul>
+            <li>Asistente de docencia — sesiones de tutoría en álgebra y análisis.</li>
+            <li>Profesor de la academia Trinotrix.</li>
+          </ul>
+      </div>
       <div class="contacto">
         <h3>Contacto</h3>
         <p><strong>Teléfono:</strong> +51 951453715</p>
@@ -49,7 +50,14 @@
           </a>
         </p>
       </div>
+      
+      <div class="imagen">
+        <img src="Lenin_Trinidad.png">
+      </div>
     </section>
+
+    <section>
+          </section>
   </main>
 
   <script defer src="script.js"></script>
