--- a/blog.html
+++ b/blog.html
@@ -9,14 +9,18 @@
 </head>
 <body>
   <header>
-    <h1>Lenin Trinidad</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="sobre.html">Sobre Mí</a>
-      <a href="proyectos.html">Proyectos</a>
-      <a href="blog.html">Blog</a>
-      <a href="apuntes.html">Apuntes</a>
-    </nav>
+    <div class="header-container">
+        <div class="header-title">
+            <h1>Lenin Trinidad</h1>
+        </div>
+        <nav>
+            <a href="index.html" class="active">Inicio</a>
+            <a href="apuntes.html">Apuntes</a>
+            <a href="proyectos.html">Proyectos</a>
+            <a href="blog.html">Blog</a>
+            <a href="sobre.html">Sobre mí</a>
+        </nav>
+    </div>
   </header>
 
   <main class="container">
