--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Matemáticas, enseñanza y apuntes claros</h2>
       <p>Estudiante de Pregrado de Matemática: Interés en análisis, álgebra y dinámica. Comparto apuntes, 
         recursos didácticos, mis proyectos personales y material que considere interesante.</p>
-      <p class="tagline">"Las matemáticas no conocen razas ni fronteras geográficas; para las matemáticas, el mundo cultural es un país" - David Hilbert</p>
+      <!-- <p class="tagline"></p> -->
     </section>
 
     <section id="highlights">
