--- a/blogs/entrada1.html
+++ b/blogs/entrada1.html
@@ -16,11 +16,11 @@
             <h1>Lenin Trinidad</h1>
         </div>
         <nav>
-            <a href="index.html" class="active">Inicio</a>
-            <a href="apuntes.html">Apuntes</a>
-            <a href="proyectos.html">Proyectos</a>
-            <a href="blog.html">Blog</a>
-            <a href="sobre.html">Sobre mí</a>
+            <a href="../index.html" class="active">Inicio</a>
+            <a href="../apuntes.html">Apuntes</a>
+            <a href="../proyectos.html">Proyectos</a>
+            <a href="../blog.html">Blog</a>
+            <a href="../sobre.html">Sobre mí</a>
         </nav>
     </div>
   </header>
