Cambios Miercoles, empiezo a redactar los apuntes

--- a/sobre.html
+++ b/sobre.html
@@ -28,9 +28,9 @@
     <section class="sobre-contenedor">
       <div class="sobre-texto">
         <h2>Sobre mí</h2>
-        <p>Soy estudiante del pregrado de Matemática en la Universidad Nacional Mayor de San Marcos, 
+        <p>Egresado de la carrera de Matemática en la Universidad Nacional Mayor de San Marcos, 
           interesado en análisis, álgebra y sistemas dinámicos. 
-          Me apasiona explorar temas complejos con rigor y claridad; por eso escribo apuntes para estudiantes y doy pequeñas charlas y guías didácticas.
+          Me apasiona explorar temas complejos con rigor y claridad.
         </p>
 
         <h3>Experiencia</h3>
