--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main class="container">
     <section id="descripcion">
       <h2>Matemáticas, enseñanza y apuntes claros</h2>
-      <p>Estudiante de Pregrado de Matemática: Interés en análisis, álgebra y dinámica. Comparto apuntes, 
+      <p>Egresado de la carrera de Matemática: Interés en análisis, álgebra y dinámica. Comparto apuntes, 
         recursos didácticos, mis proyectos personales y material que considere interesante.</p>
       <!-- <p class="tagline"></p> -->
     </section>
